fix spacing in navbar

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3900,7 +3900,7 @@ tr {
   display: block;
 }
 .profile-dropdown-wrapper {
-  width: 150px;
+  width: 172px;
 }
 .profile-dropdown {
   display: flex;
